--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -1,9 +1,19 @@
 .hero
     position: relative
+    display: flex
+    flex-direction: column
+    justify-content: center
     padding-top: 100px
     background: $dark url('../img/hero-bg.jpg') no-repeat center/cover
     height: 100vh
     color: $light
+    &__content
+        max-width: 670px
+    &__text
+        font-size: 22px
+        max-width: 500px
+    &__button
+        margin-right: 20px
     &__instagram
         position: absolute
         max-width: 80px
@@ -35,6 +45,11 @@
         transform: rotate(90deg)
 .title
     margin: 0
+    font-family: 'Yeseva One', cursive;
+    text-transform: uppercase
+    font-size: 40px
+    &--primary
+        color: $primary
 
     
     
