--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -18,7 +18,7 @@
         text-decoration: none
         color: $light
         text-transform: uppercase
-        margin-right: 40px
+        margin-right: 2.857rem
         transition: 0.2s
         &:hover
             color: $primary
@@ -26,4 +26,4 @@
     color: $primary
 .contacts
     &__phone
-        margin-right: 45px
+        margin-right: 3.214rem
