--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,16 +1,18 @@
 *, *:before, *:after
     box-sizing: border-box
+html
+    font-size: 14px 
 body
     font-family: 'Futura Book', sans-serif
-    font-size: 14px
+    font-size: 1rem
 
 .section
     &-title
         text-align: center
         text-transform: uppercase
         font-family: 'Yeseva One', cursive
-        font-size: 20px;
-        line-height: 28px;
+        font-size: 1.43rem
+        line-height: 2rem
         &__image
             display: flex
             align-items: center
