--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -17,15 +17,16 @@
         background-color: rgba($dark, 0.7)
     &__content
         position: relative
-        max-width: 670px
+        max-width: 47.857rem
+        margin-left: 4.28rem
     &__text
-        font-size: 22px
-        max-width: 500px
+        font-size: 1.571rem
+        max-width: 35.714rem
     &__button
-        margin-right: 20px
+        margin-right: 1.429rem
     &__instagram
         position: absolute
-        max-width: 80px
+        max-width: 5.714rem
         height: 100%
         left: 0
         top: 0
@@ -36,8 +37,8 @@
         justify-content: center
         left: 0
         bottom: 0
-        min-width: 247px
-        min-height: 97px
+        min-width: 17.643rem
+        min-height: 6.929rem
         background-color: $dark
         text-transform: uppercase
         color: $light
@@ -73,7 +74,7 @@
     margin: 0
     font-family: 'Yeseva One', cursive;
     text-transform: uppercase
-    font-size: 40px
+    font-size: 2.857rem
     &--primary
         color: $primary
 
