--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -13,17 +13,21 @@
 .logo
     color: $primary
     text-transform: uppercase
+    font-size: 1.42rem
 .nav
     &__item
         text-decoration: none
         color: $light
         text-transform: uppercase
+        font-size: 1.32rem
         margin-right: 2.857rem
         transition: 0.2s
         &:hover
             color: $primary
 .phone
     color: $primary
+    font-size: 1.32rem
 .contacts
     &__phone
         margin-right: 3.214rem
+        font-size: 1.32rem
