--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -20,10 +20,14 @@
         max-width: 47.857rem
         margin-left: 4.28rem
     &__text
-        font-size: 1.571rem
+        font-size: 1.671rem
         max-width: 35.714rem
+        line-height: 1.7
     &__button
         margin-right: 1.429rem
+        width: 18.6rem
+        height: 4.5rem
+
     &__instagram
         position: absolute
         max-width: 5.714rem
@@ -41,13 +45,14 @@
         min-height: 6.929rem
         background-color: $dark
         text-transform: uppercase
+        font-size: 1.15rem
         color: $light
         text-decoration: none
         &::after
             content: ''
             background: url('../img/arrow-down.svg') no-repeat center
-            width: 30px
-            height: 30px
+            width: 35px
+            height: 35px
             border: 2px solid $primary
             border-radius: 50%
             margin-left: 12px
@@ -59,7 +64,7 @@
     &__link
         display: flex
         align-items: center
-        line-height: 0.8
+        line-height: 1
         text-transform: uppercase
         color: $primary
         text-decoration: none
@@ -72,9 +77,10 @@
             margin-left: 8px
 .title
     margin: 0
-    font-family: 'Yeseva One', cursive;
+    font-family: 'Yeseva One', cursive
     text-transform: uppercase
-    font-size: 2.857rem
+    font-size: 3.4rem
+    line-height: 1.45
     &--primary
         color: $primary
 
