--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,16 +1,31 @@
-@media screen and ( max-width: 1200px )
+@media screen and ( max-width: 1650px )
+    .container
+        width: 88%
+    
+@media screen and ( max-width: 1500px )
     html
         font-size: 12px
     .nav
         &__item
             margin-right: 1rem
+    .hero
+        &__button
+            font-size: 1.2rem
+@media screen and ( max-width: 1170px )
+    html
+        font-size: 10px
+    .hero
+        &__button
+            display: block
+            min-width: 22.86rem
+            margin-bottom: 1.1rem
 @media screen and ( max-width: 992px )
     .nav
         display: none
     .hero
         &__instagram
             display: none
-@media screen and ( max-width: 570px )
+@media screen and ( max-width: 610px )
     .contacts
         &__button
             display: none
@@ -38,8 +53,15 @@
     .hero
         &__scroll-down
             display: none
+@media screen and ( max-width: 350px )
+    .contacts
+       &__phone
+           margin-right: 5px
+@media screen and ( max-width: 360px )
+    .hero
+        &__content
+            margin-left: 2rem
     
-
    
     
 
