feat: add sections types & design

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -5,23 +5,26 @@ html
 body
     font-family: 'Futura Book', sans-serif
     font-size: 1rem
-
+img
+    max-width: 100%
 .section
+    padding: 60px 0
     &-title
         text-align: center
         text-transform: uppercase
         font-family: 'Yeseva One', cursive
-        font-size: 1.43rem
-        line-height: 2rem
+        font-size: 1.1rem
+        line-height: 2.25rem
         &__image
             display: flex
             align-items: center
             justify-content: center
+            margin-bottom: 2rem
             &::after, &::before
                 content: ''
-                width: 32px
-                height: 2px
+                width: 3rem
+                height: 3px
                 background-color: $primary
-                margin: 0 10px
+                margin: 0 1rem
                 border-radius: 30px
                 
