--- a/css/style.css
+++ b/css/style.css
@@ -353,23 +353,29 @@ body {
   font-family: 'Futura Book', sans-serif;
   font-size: 1rem; }
 
-.section-title {
-  text-align: center;
-  text-transform: uppercase;
-  font-family: 'Yeseva One', cursive;
-  font-size: 1.43rem;
-  line-height: 2rem; }
-  .section-title__image {
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-    .section-title__image::after, .section-title__image::before {
-      content: '';
-      width: 32px;
-      height: 2px;
-      background-color: #E3B873;
-      margin: 0 10px;
-      border-radius: 30px; }
+img {
+  max-width: 100%; }
+
+.section {
+  padding: 60px 0; }
+  .section-title {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Yeseva One', cursive;
+    font-size: 1.1rem;
+    line-height: 2.25rem; }
+    .section-title__image {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 2rem; }
+      .section-title__image::after, .section-title__image::before {
+        content: '';
+        width: 3rem;
+        height: 3px;
+        background-color: #E3B873;
+        margin: 0 1rem;
+        border-radius: 30px; }
 
 .header {
   position: fixed;
@@ -495,6 +501,58 @@ body {
   .title--primary {
     color: #E3B873; }
 
+.types__section-title {
+  margin-bottom: 3rem; }
+
+.row {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between; }
+
+.col {
+  flex-basis: 32%; }
+
+.card__image {
+  position: relative;
+  display: flex;
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%; }
+
+.card__text {
+  position: relative;
+  max-width: 29.5rem;
+  margin: 0 auto;
+  margin-top: -11.5rem;
+  padding: 1.1rem 3.2rem;
+  background-color: #ffffff;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03); }
+
+.card__title {
+  font-family: 'Yeseva One', cursive;
+  font-size: 1.5rem;
+  margin-top: 1.4rem;
+  margin-bottom: 0.8rem; }
+
+.card__list {
+  padding: 0 0 0 1rem;
+  margin: 0;
+  font-size: 1.27rem;
+  line-height: 2.25rem;
+  color: #959595;
+  margin-bottom: 2.5rem; }
+
+.card__pricetag {
+  position: absolute;
+  left: 0;
+  bottom: -2.8rem;
+  font-size: 1.5rem;
+  font-family: 'Yeseva One', cursive;
+  text-transform: uppercase;
+  background-color: #E3B873;
+  color: #ffffff;
+  padding: 1.5rem 3.8rem; }
+
 @media screen and (max-width: 1650px) {
   .container {
     width: 88%; } }
@@ -520,6 +578,15 @@ body {
     display: none; }
   .hero__instagram {
     display: none; } }
+
+@media screen and (max-width: 750px) {
+  .row {
+    flex-direction: column;
+    align-items: center; }
+  .types__card {
+    margin-bottom: 4.3rem; }
+  .card__text {
+    margin-left: 0; } }
 
 @media screen and (max-width: 610px) {
   .contacts__button {
