--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -25,6 +25,18 @@
     .hero
         &__instagram
             display: none
+
+@media screen and ( max-width: 750px )
+    .row
+        flex-direction: column
+        align-items: center
+    .types
+        &__card
+            margin-bottom: 4.3rem
+    .card
+        &__text
+            margin-left: 0
+    
 @media screen and ( max-width: 610px )
     .contacts
         &__button
