--- a/css/style.css
+++ b/css/style.css
@@ -553,6 +553,18 @@ img {
   color: #ffffff;
   padding: 1.5rem 3.8rem; }
 
+.section-title__text {
+  display: flex;
+  width: 70%;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'FuturaBookC', cursive;
+  color: #363636;
+  font-size: 1.428rem;
+  line-height: 1.93rem; }
+
 @media screen and (max-width: 1650px) {
   .container {
     width: 88%; } }
