--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -1,16 +1,22 @@
 .modal
+    opacity: 0
+    visibility: hidden
     position: fixed
     z-index: 199
     left: 0
     top: 0
     bottom: 0
     right: 0
-    width: 100%
-    height: 100%
-    background-color: rgba($dark, 0.6)
     display: flex
     align-items: center
     justify-content: center
+    width: 100%
+    height: 100%
+    background-color: rgba($dark, 0.6)
+    &--visible
+        opacity: 1
+        visibility: visible
+    
     &__dialog
         position: relative
         max-width: 36.36rem
@@ -43,7 +49,8 @@
     &__policy
         margin-bottom: 2.7rem
     &__button
-        align-self: flex-end
+        align-items: flex-end
+        justify-content: center
 
    
 
