add fon before dezign

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,6 +9,7 @@
 @import 'templates/control'
 @import 'templates/types'
 @import 'templates/dezign'
+@import 'templates/steps'
 @import 'templates/modal'
 
 @import 'media'
