--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,7 @@ template {
     margin-right: 0.64rem; }
 
 .container {
-  width: 91%;
+  width: 97%;
   max-width: 1600px;
   margin: auto; }
 
@@ -593,17 +593,40 @@ img {
   color: #ffffff;
   padding: 1.5rem 3.8rem; }
 
+.dezign__fon {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: #131313 url("../img/bg-lines.svg") center;
+  background-size: 100%;
+  margin-top: 300px;
+  /*margin-top: 350px*/ }
+
+.section-title__heading {
+  line-height: 1rem; }
+
 .section-title__text {
   display: flex;
-  width: 70%;
+  width: 64%;
   align-items: center;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
+  margin-top: -7px;
   font-family: 'FuturaBookC', cursive;
   color: #363636;
-  font-size: 1.428rem;
-  line-height: 1.93rem; }
+  font-size: 1.3rem;
+  line-height: 2rem;
+  text-transform: none; }
+
+.steps__fon {
+  display: flex;
+  z-index: 100;
+  width: 100%;
+  height: 1000px;
+  background: #131313 url("../img/bg-lines.svg") center;
+  background-size: 100%;
+  margin-top: -500px; }
 
 .modal {
   opacity: 0;
@@ -655,8 +678,7 @@ img {
   .modal__policy {
     margin-bottom: 2.7rem; }
   .modal__button {
-    align-items: flex-end;
-    justify-content: center; }
+    align-items: flex-end; }
 
 @media screen and (max-width: 1650px) {
   .container {
@@ -691,7 +713,17 @@ img {
   .types__card {
     margin-bottom: 4.3rem; }
   .card__text {
-    margin-left: 0; } }
+    margin-left: 0;
+    margin-bottom: 8rem; }
+  .section-title__heading {
+    color: #ffffff; }
+  .dezign__fon {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: #131313; }
+  .section-title__text {
+    color: #ffffff; } }
 
 @media screen and (max-width: 610px) {
   .contacts__button {
