--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -36,6 +36,20 @@
     .card
         &__text
             margin-left: 0
+            margin-bottom: 8rem
+    .section-title
+        &__heading
+            color: $light
+    .dezign
+        &__fon
+            position: relative
+            width: 100%
+            height: 100%
+            background: $dark 
+            
+    .section-title
+        &__text
+            color: $light
     
 @media screen and ( max-width: 610px )
     .contacts
