--- a/sass/templates/_dezign.sass
+++ b/sass/templates/_dezign.sass
@@ -1,12 +1,28 @@
+.dezign
+   &__fon
+        position: absolute
+        width: 100%
+        height: 100vh
+        background: $dark url('../img/bg-lines.svg') center
+        background-size: 100%
+        margin-top: 300px
+        /*margin-top: 350px*/
+        
+.section-title
+    &__heading
+        line-height: 1rem
+        
 .section-title
     &__text
         display: flex
-        width: 70%
+        width: 64%
         align-items: center
         justify-content: center
         margin-left: auto
         margin-right: auto
+        margin-top: -7px
         font-family: 'FuturaBookC', cursive
         color: $green
-        font-size: 1.428rem
-        line-height: 1.93rem
+        font-size: 1.3rem
+        line-height: 2rem
+        text-transform: none
