--- a/css/style.css
+++ b/css/style.css
@@ -611,8 +611,7 @@ img {
   height: 100vh;
   background: #131313 url("../img/bg-lines.svg") center;
   background-size: 100%;
-  margin-top: 300px;
-  /*margin-top: 350px*/ }
+  margin-top: 300px; }
 
 .section-title__heading {
   line-height: 1rem; }
@@ -719,6 +718,14 @@ img {
     display: none; } }
 
 @media screen and (max-width: 750px) {
+  .dezign__fon {
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height: 400vh;
+    background: #131313;
+    background-size: 100%;
+    margin-top: -10px; }
   .row {
     flex-direction: column;
     align-items: center; }
@@ -727,15 +734,16 @@ img {
   .card__text {
     margin-left: 0;
     margin-bottom: 8rem; }
-  .section-title__heading {
-    color: #ffffff; }
-  .dezign__fon {
+  .section-title__heading--dezign {
     position: relative;
-    width: 100%;
-    height: 100%;
-    background: #131313; }
+    color: #ffffff; }
   .section-title__text {
-    color: #ffffff; } }
+    position: relative;
+    color: #ffffff; }
+  .section-title__image {
+    position: relative; }
+  .card__list {
+    margin-bottom: 1rem; } }
 
 @media screen and (max-width: 610px) {
   .contacts__button {
