--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -2,4 +2,14 @@
     width: 97%
     max-width: 1600px
     margin: auto
+.row
+    display: flex
+    align-items: flex-start
+    justify-content: space-between
     
+   
+.col
+    &-30
+        flex-basis: 30%
+    &-50
+        flex-basis: 50%
