--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -1,11 +1,11 @@
 .control
     min-height: 100vh
     width: 100%
-    display: table
+    /*display: table*/
     /*background: url("../video/ocean.jpg")*/
 .section-title
     &__control
-        display: table-cell
-        vertical-align: middle
-        color: $light
+        /* display: table-cell*/
+        /*vertical-align: middle*/
+        color: $dark
         text-align: center
