--- a/sass/templates/_dezign.sass
+++ b/sass/templates/_dezign.sass
@@ -7,10 +7,7 @@
         background-size: 100%
         margin-top: 300px
         
-        
-.section-title
-    &__heading
-        line-height: 1rem
+   
         
 .section-title
     &__text
@@ -26,3 +23,8 @@
         font-size: 1.3rem
         line-height: 2rem
         text-transform: none
+        &--light
+            color: $light
+    &--left
+        text-align: left
+            
