--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -15,6 +15,16 @@
         width: 100%
         height: 100%
         background-color: rgba($dark, 0.7)
+    &::after
+       content: ''
+       position: absolute
+       bottom: 0
+       left: 0
+       right: 0
+       width: 100%
+       height: 3.46rem
+       background: $dark
+
     &__content
         position: relative
         max-width: 47.857rem
@@ -36,6 +46,7 @@
         top: 0
     &__scroll-down
         position: absolute
+        z-index: 130
         display: flex
         align-items: center
         justify-content: center
