refact: rewrite links for JS files

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -19,12 +19,31 @@ img
         font-family: 'Yeseva One', cursive
         font-size: 1.1rem
         line-height: 2.25rem
+        &__text
+            display: block
+            font-family: 'FuturaBookC', cursive
+            margin-left: none
+            text-align: left
+            text-transform: none
+            &--dezign
+                width: 64%
+                align-items: center
+                justify-content: center
+                margin-left: auto
+                margin-right: auto
+                color: $green
+                font-size: 1.3rem
+                line-height: 2rem
+                text-transform: none
+            &--light
+                color: $light
         &__heading
             line-height: 1rem
             &--primary
                 color: $primary
-        
-
+                text-align: left
+.section-title
+ 
         &__image
             display: flex
             align-items: center
