--- a/css/style.css
+++ b/css/style.css
@@ -419,22 +419,42 @@ img {
     font-family: 'Yeseva One', cursive;
     font-size: 1.1rem;
     line-height: 2.25rem; }
+    .section-title__text {
+      display: block;
+      font-family: 'FuturaBookC', cursive;
+      margin-left: none;
+      text-align: left;
+      text-transform: none; }
+      .section-title__text--dezign {
+        width: 64%;
+        align-items: center;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        color: #363636;
+        font-size: 1.3rem;
+        line-height: 2rem;
+        text-transform: none; }
+      .section-title__text--light {
+        color: #ffffff; }
     .section-title__heading {
       line-height: 1rem; }
       .section-title__heading--primary {
-        color: #E3B873; }
-    .section-title__image {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 2rem; }
-      .section-title__image::after, .section-title__image::before {
-        content: '';
-        width: 3rem;
-        height: 3px;
-        background-color: #E3B873;
-        margin: 0 1rem;
-        border-radius: 30px; }
+        color: #E3B873;
+        text-align: left; }
+
+.section-title__image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem; }
+  .section-title__image::after, .section-title__image::before {
+    content: '';
+    width: 3rem;
+    height: 3px;
+    background-color: #E3B873;
+    margin: 0 1rem;
+    border-radius: 30px; }
 
 .header {
   position: fixed;
@@ -633,25 +653,6 @@ img {
   background: #131313 url("../img/bg-lines.svg") center;
   background-size: 100%;
   margin-top: 300px; }
-
-.section-title__text {
-  display: flex;
-  width: 64%;
-  align-items: center;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: -7px;
-  font-family: 'FuturaBookC', cursive;
-  color: #363636;
-  font-size: 1.3rem;
-  line-height: 2rem;
-  text-transform: none; }
-  .section-title__text--light {
-    color: #ffffff; }
-
-.section-title--left {
-  text-align: left; }
 
 .steps__fon {
   display: flex;
