--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ template {
   flex-basis: 30%; }
 
 .col-50 {
-  flex-basis: 50%; }
+  width: 50%; }
 
 *, *:before, *:after {
   box-sizing: border-box; }
@@ -417,12 +417,14 @@ img {
     text-align: center;
     text-transform: uppercase;
     font-family: 'Yeseva One', cursive;
-    font-size: 1.1rem;
-    line-height: 2.25rem; }
+    font-size: 1.1rem; }
     .section-title__text {
       display: block;
       font-family: 'FuturaBookC', cursive;
       margin-left: none;
+      font-size: 1.29rem;
+      line-height: 2.07rem;
+      max-width: 33rem;
       text-align: left;
       text-transform: none; }
       .section-title__text--dezign {
@@ -438,23 +440,32 @@ img {
       .section-title__text--light {
         color: #ffffff; }
     .section-title__heading {
-      line-height: 1rem; }
+      line-height: 2.25rem; }
       .section-title__heading--primary {
         color: #E3B873;
         text-align: left; }
-
-.section-title__image {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 2rem; }
-  .section-title__image::after, .section-title__image::before {
-    content: '';
-    width: 3rem;
-    height: 3px;
-    background-color: #E3B873;
-    margin: 0 1rem;
-    border-radius: 30px; }
+    .section-title__word {
+      display: flex;
+      align-items: center; }
+      .section-title__word::after {
+        content: ' ';
+        width: 90px;
+        height: 2px;
+        border-radius: 1px;
+        background-color: #E3B873;
+        margin-left: 2rem; }
+    .section-title__image {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 2rem; }
+      .section-title__image::after, .section-title__image::before {
+        content: '';
+        width: 3rem;
+        height: 3px;
+        background-color: #E3B873;
+        margin: 0 1rem;
+        border-radius: 30px; }
 
 .header {
   position: fixed;
@@ -589,6 +600,46 @@ img {
   line-height: 1.45; }
   .title--primary {
     color: #E3B873; }
+
+.swiper-slide {
+  display: flex;
+  flex-wrap: wrap; }
+  .swiper-slide__text {
+    flex-basis: 50%;
+    margin-bottom: 2.42rem;
+    padding-bottom: 2rem; }
+  .swiper-slide__heading {
+    font-size: 1.285rem;
+    line-height: 1.78rem;
+    font-family: 'Yeseva One', cursive;
+    color: #E3B873;
+    text-transform: uppercase;
+    margin-bottom: 0.64rem; }
+
+.swiper-pagination-bullet {
+  background-color: rgba(255, 255, 255, 0.3); }
+  .swiper-pagination-bullet-active {
+    background: #ffffff; }
+
+.swiper-button-prev, .swiper-button-next {
+  background-size: 42px;
+  width: 3.55rem;
+  height: 1rem;
+  bottom: 0;
+  top: auto; }
+  .swiper-button-prev::after, .swiper-button-next::after {
+    display: none; }
+
+.swiper-button-prev {
+  margin-left: 0;
+  background: url("../img/Group (1).svg"); }
+
+.swiper-button-next {
+  background: url("../img/arrow-next.svg"); }
+
+.swiper-container-horizontal > .swiper-pagination-bullets {
+  width: auto;
+  bottom: -0.2rem; }
 
 .control {
   min-height: 100vh;
