--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -4,8 +4,9 @@
         flex-wrap: wrap
         &__text
             flex-basis: 50%
-            margin-bottom: 2.42rem
-            padding-bottom: 2rem
+            margin-bottom: 1.42rem
+            padding-bottom: 1rem
+            font-size: 1.1rem
         &__heading
             font-size: 1.285rem
             line-height: 1.78rem
@@ -13,27 +14,32 @@
             color: $primary
             text-transform: uppercase
             margin-bottom: 0.64rem
+    &-wrapper
+        margin-bottom: 4.5rem
+
+
     &-pagination
         &-bullet
             background-color: rgba($light, 0.3)
+            margin-top: 2rem
             &-active
                 background: $light
      
     &-button
         
         &-prev, &-next
-            background-size: 42px
-            width: 3.55rem
-            height: 1rem
+            //background-size: 3rem
+            width: 3.5rem
+            //height: 1rem
             bottom: 0
             top: auto
             &::after
                 display: none
         &-prev
-            margin-left: 0
-            background: url('../img/Group (1).svg')
+            margin-left: -0.8rem
+            background: url('../img/Group (1).svg') no-repeat center
         &-next
-            background: url('../img/arrow-next.svg')
+            background: url('../img/arrow-next.svg') no-repeat center
 .swiper-container-horizontal>.swiper-pagination-bullets
     width: auto
-    bottom: -0.2rem
+    bottom: 1.2rem
