--- a/css/style.css
+++ b/css/style.css
@@ -606,8 +606,9 @@ img {
   flex-wrap: wrap; }
   .swiper-slide__text {
     flex-basis: 50%;
-    margin-bottom: 2.42rem;
-    padding-bottom: 2rem; }
+    margin-bottom: 1.42rem;
+    padding-bottom: 1rem;
+    font-size: 1.1rem; }
   .swiper-slide__heading {
     font-size: 1.285rem;
     line-height: 1.78rem;
@@ -616,30 +617,32 @@ img {
     text-transform: uppercase;
     margin-bottom: 0.64rem; }
 
+.swiper-wrapper {
+  margin-bottom: 4.5rem; }
+
 .swiper-pagination-bullet {
-  background-color: rgba(255, 255, 255, 0.3); }
+  background-color: rgba(255, 255, 255, 0.3);
+  margin-top: 2rem; }
   .swiper-pagination-bullet-active {
     background: #ffffff; }
 
 .swiper-button-prev, .swiper-button-next {
-  background-size: 42px;
-  width: 3.55rem;
-  height: 1rem;
+  width: 3.5rem;
   bottom: 0;
   top: auto; }
   .swiper-button-prev::after, .swiper-button-next::after {
     display: none; }
 
 .swiper-button-prev {
-  margin-left: 0;
-  background: url("../img/Group (1).svg"); }
+  margin-left: -0.8rem;
+  background: url("../img/Group (1).svg") no-repeat center; }
 
 .swiper-button-next {
-  background: url("../img/arrow-next.svg"); }
+  background: url("../img/arrow-next.svg") no-repeat center; }
 
 .swiper-container-horizontal > .swiper-pagination-bullets {
   width: auto;
-  bottom: -0.2rem; }
+  bottom: 1.2rem; }
 
 .control {
   min-height: 100vh;
@@ -784,12 +787,17 @@ img {
   .hero__button {
     display: block;
     min-width: 22.86rem;
-    margin-bottom: 1.1rem; } }
+    margin-bottom: 1.1rem; }
+  .swiper-button-prev, .swiper-button-next {
+    width: 10%;
+    margin-top: 0.2rem; } }
 
 @media screen and (max-width: 992px) {
   .nav {
     display: none; }
   .hero__instagram {
+    display: none; }
+  .hero::after {
     display: none; } }
 
 @media screen and (max-width: 750px) {
@@ -809,6 +817,8 @@ img {
   .card__text {
     margin-left: 0;
     margin-bottom: 8rem; }
+  .section {
+    padding: 2rem 0; }
   .section-title__heading--dezign {
     position: relative;
     color: #ffffff; }
@@ -818,7 +828,10 @@ img {
   .section-title__image {
     position: relative; }
   .card__list {
-    margin-bottom: 1rem; } }
+    margin-bottom: 1rem; }
+  .swiper-button-prev, .swiper-button-next {
+    width: 15%;
+    margin-top: 0.2rem; } }
 
 @media screen and (max-width: 610px) {
   .contacts__button {
