--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -45,6 +45,8 @@ img
             &--primary
                 color: $primary
                 text-align: left
+                font-size: 1.93rem
+                line-height: 2.64rem
         &__word
             display: flex
             align-items: center
