--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -21,8 +21,8 @@ img
         
         &__text
             display: block
-            font-family: 'FuturaBookC', cursive
             margin-left: none
+            font-family: 'FuturaBookC', cursive
             font-size: 1.29rem
             line-height: 2.07rem
             max-width: 33rem
@@ -47,6 +47,16 @@ img
                 text-align: left
                 font-size: 1.93rem
                 line-height: 2.64rem
+                &-step
+                    margin-bottom: 3rem
+            &--light
+                color: $light
+                text-align: left
+                font-size: 1.286rem
+                line-height: 1.786rem
+        &__plese
+            display: flex
+
         &__word
             display: flex
             align-items: center
