--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -25,7 +25,7 @@
             &-prev, &-next
                 width: 10%
                 margin-top: 0.2rem
-@media screen and ( max-width: 992px )
+@media screen and ( max-width: 994px )
     .nav
         display: none
     .hero
@@ -33,6 +33,11 @@
             display: none
         &::after
            display: none 
+    .swiper
+        &-button
+            &-prev, &-next
+                width: 17%
+                margin-top: 0.7rem
        
            
     
@@ -85,6 +90,9 @@
             &-prev, &-next
                 width: 15%
                 margin-top: 0.2rem
+    .col
+        &-50
+            width: 80%
 
             
     
@@ -116,14 +124,33 @@
     .hero
         &__scroll-down
             display: none
+@media screen and ( max-width: 409px )
+    .swiper
+        &-button
+            &-prev, &-next
+                width: 17%
+                margin-top: 0.2rem
+
+    
 @media screen and ( max-width: 350px )
     .contacts
        &__phone
            margin-right: 5px
+    .swiper
+        &-button
+            &-prev, &-next
+                width: 18%
+                margin-top: 0.4rem
 @media screen and ( max-width: 360px )
     .hero
         &__content
             margin-left: 2rem
+@media screen and ( max-width: 320px )
+    .swiper
+        &-button
+            &-prev, &-next
+                width: 20%
+                margin-top: 0.4rem
     
    
     
