--- a/css/style.css
+++ b/css/style.css
@@ -498,25 +498,25 @@ img {
 .logo {
   color: #E3B873;
   text-transform: uppercase;
-  font-size: 1.42rem; }
+  font-size: 1.1rem; }
 
 .nav__item {
   text-decoration: none;
   color: #ffffff;
   text-transform: uppercase;
-  font-size: 1.32rem;
-  margin-right: 2.857rem;
+  font-size: 1rem;
+  margin-right: 4rem;
   transition: 0.2s; }
   .nav__item:hover {
     color: #E3B873; }
 
 .phone {
   color: #E3B873;
-  font-size: 1.32rem; }
+  font-size: 1rem; }
 
 .contacts__phone {
   margin-right: 3.214rem;
-  font-size: 1.32rem; }
+  font-size: 1rem; }
 
 .hero {
   position: relative;
@@ -526,7 +526,16 @@ img {
   padding-top: 100px;
   background: #131313 url("../img/hero-bg.jpg") no-repeat center/cover;
   height: 100vh;
-  color: #ffffff; }
+  color: #ffffff;
+  /*&::after
+       content: ''
+       position: absolute
+       bottom: 0
+       left: 0
+       right: 0
+       width: 100%
+       height: 3.46rem
+       background: $dark*/ }
   .hero::before {
     content: '';
     position: absolute;
@@ -535,15 +544,6 @@ img {
     width: 100%;
     height: 100%;
     background-color: rgba(19, 19, 19, 0.7); }
-  .hero::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 3.46rem;
-    background: #131313; }
   .hero__content {
     position: relative;
     max-width: 47.857rem;
@@ -553,6 +553,8 @@ img {
     max-width: 35.714rem;
     line-height: 1.7; }
   .hero__button {
+    float: left;
+    flex-direction: row;
     margin-right: 1.429rem;
     width: 18.6rem;
     height: 4.5rem; }
@@ -564,12 +566,13 @@ img {
     top: 0; }
   .hero__scroll-down {
     position: absolute;
-    z-index: 130;
+    margin-top: 0;
+    /*z-index: 130*/
     display: flex;
     align-items: center;
     justify-content: center;
     left: 0;
-    bottom: 0;
+    bottom: -3.46rem;
     min-width: 17.643rem;
     min-height: 6.929rem;
     background-color: #131313;
@@ -810,13 +813,15 @@ img {
 
 @media screen and (max-width: 1650px) {
   .container {
-    width: 88%; } }
+    width: 88%; }
+  .nav__item {
+    margin-right: 3rem; } }
 
 @media screen and (max-width: 1500px) {
   html {
     font-size: 12px; }
   .nav__item {
-    margin-right: 1rem; }
+    margin-right: 2rem; }
   .hero__button {
     font-size: 1.2rem; } }
 
@@ -874,10 +879,16 @@ img {
   .swiper-button-prev, .swiper-button-next {
     width: 15%;
     margin-top: 0.2rem; }
+  .swiper-slide__text {
+    flex-basis: 48%; }
   .col-50 {
-    width: 80%; } }
+    width: 90%; }
+  .hero__scroll-down {
+    display: none; } }
 
 @media screen and (max-width: 610px) {
+  html {
+    font-size: 8px; }
   .contacts__button {
     display: none; }
   .contacts__phone {
@@ -886,28 +897,39 @@ img {
     color: #ffffff; }
   .title {
     font-size: 1.64rem; }
-  .hero__instagram {
-    display: none; }
-  .hero__text {
-    font-size: 1.29rem;
-    margin-bottom: 2.28rem; }
-  .hero__content {
-    max-width: 22.86rem; }
-  .hero__button {
-    display: block;
-    min-width: 22.86rem;
-    margin-bottom: 1.85rem; }
-  .hero__scroll-down {
+  .hero {
+    background: #131313 url("../img/hero-bg.jpg") no-repeat center;
+    width: 100%; }
+    .hero__instagram {
+      display: none; }
+    .hero__text {
+      font-size: 1.29rem;
+      margin-bottom: 2.28rem; }
+    .hero__content {
+      max-width: 22.86rem; }
+    .hero__button {
+      display: block;
+      min-width: 22.86rem;
+      margin-bottom: 1.85rem; }
+    .hero__scroll-down {
+      display: none; }
+  .prijects-title__word::after {
     display: none; } }
 
 @media screen and (max-height: 530px) {
-  .hero__scroll-down {
-    display: none; } }
+  .hero {
+    max-width: 90%; }
+    .hero__scroll-down {
+      display: none; } }
 
 @media screen and (max-width: 409px) {
   .swiper-button-prev, .swiper-button-next {
     width: 17%;
     margin-top: 0.2rem; } }
+
+@media screen and (max-width: 375px) {
+  .col-50 {
+    width: 95%; } }
 
 @media screen and (max-width: 350px) {
   .contacts__phone {
