--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -15,7 +15,7 @@
         width: 100%
         height: 100%
         background-color: rgba($dark, 0.7)
-    &::after
+    /*&::after
        content: ''
        position: absolute
        bottom: 0
@@ -23,7 +23,7 @@
        right: 0
        width: 100%
        height: 3.46rem
-       background: $dark
+       background: $dark*/
 
     &__content
         position: relative
@@ -34,9 +34,12 @@
         max-width: 35.714rem
         line-height: 1.7
     &__button
+        float: left;
+        flex-direction: row
         margin-right: 1.429rem
         width: 18.6rem
         height: 4.5rem
+        
 
     &__instagram
         position: absolute
@@ -46,12 +49,13 @@
         top: 0
     &__scroll-down
         position: absolute
-        z-index: 130
+        margin-top: 0
+        /*z-index: 130*/
         display: flex
         align-items: center
         justify-content: center
         left: 0
-        bottom: 0
+        bottom: -3.46rem
         min-width: 17.643rem
         min-height: 6.929rem
         background-color: $dark
